# rbac-mock

./: .gitignore  CLAUDE.md  Dockerfile.fly  README.md  docker-compose.yml  fly.toml  nginx.conf  start.sh  supervisord.conf
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_role_flags_org_roles.py  0003_members_chain.py  0004_exchanges.py  0005_email_to_description.py  0006_password_plaintext.py  0007_add_descriptions.py
backend/app/: auth.py  cache.py  database.py  main.py  models.py  permissions.py  schemas.py  seed.py
backend/app/routers/: auth.py  exchanges.py  interactions.py  organizations.py  resolve.py  resources.py  roles.py  users.py
backend/scripts/: export_seed.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/wiki/en/: architecture.md  design-decisions.md  exchanges.md  glossary.md  index.md  interactions.md  orgs.md  propagation.md  resolve.md  resources.md  role-tree.md  roles.md  users.md
frontend/public/wiki/uk/: architecture.md  design-decisions.md  exchanges.md  glossary.md  index.md  interactions.md  orgs.md  propagation.md  resolve.md  resources.md  role-tree.md  roles.md  users.md
frontend/src/: App.vue  i18n.js  main.js
frontend/src/locales/: en.js  uk.js
frontend/src/router/: index.js
frontend/src/stores/: api.js  auth.js
frontend/src/views/: ExchangesView.vue  InteractionsView.vue  LoginView.vue  OrgsView.vue  ResolveView.vue  ResourcesView.vue  RoleTreeView.vue  RolesView.vue  UsersView.vue  WikiView.vue
