[project]
name = "mock-rbms-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "bcrypt>=4.1",
    "python-jose[cryptography]>=3.3",
    "pydantic[email]>=2.6",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
